fix wrapping of email

--- a/client/src/components/common/css/Footer.css
+++ b/client/src/components/common/css/Footer.css
@@ -21,6 +21,10 @@
   width: 100vw;
 }
 
+#second-column {
+  padding: 0 !important;
+}
+
 .contact-divider {
   height: 8px !important;
   margin-top: 0.25rem !important;
